# deep-research-MAF

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/skills/dependency-review/: SKILL.md
.github/skills/python-architect/: SKILL.md
.github/skills/python-code-style/: SKILL.md
.github/skills/security-scan/: SKILL.md
.specify/memory/: constitution.md
backend/: .env.template  pyproject.toml  test_streaming.py
backend/src/: main.py
backend/src/agents/: base.py  content_agent.py  planning_agent.py  reflect_agent.py  research_agent.py
backend/src/api/: middleware.py  routes.py
backend/src/models/: __init__.py  agent_message.py  agent_state.py  query.py  research_plan.py  search_result.py  synthesized_answer.py  thread.py
backend/src/observability/: telemetry.py
backend/src/services/: arxiv_search.py  azure_openai_service.py  bing_grounding_search.py  google_search.py
backend/src/workflows/: group_chat.py  state_manager.py
frontend/: package.json  tailwind.config.cjs
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: ChatInterface.tsx  InputBox.tsx  MessageBubble.tsx  MessageList.tsx  ProcessingIndicator.tsx  SourceList.tsx  StatusIndicator.tsx
frontend/src/hooks/: useAgentState.ts  useWebSocket.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/store/: agentSlice.ts  conversationSlice.ts  index.ts
frontend/src/types/: agent.ts  message.ts  search.ts
specs/001-deep-research-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-deep-research-agent/checklists/: requirements.md
(+2 files in other folders)
